feat: add comprehensive i18n support for QuestionPoolDetail
- Add extensive translation keys for QuestionBank.detail namespace
- Replace all hardcoded text with i18n translations
- Support language switching for:
  - Pool editing and management
  - Question creation and editing
  - Markdown import/export
  - Pool sharing
  - Tag management
  - Search and filtering
- All question pool detail operations now support language switching

--- a/bkquiz-web/src/locales/en.json
+++ b/bkquiz-web/src/locales/en.json
@@ -230,7 +230,83 @@
     "your_pools": "Your pools",
     "pools": "pools",
     "no_pools_yet": "No question pools yet.",
-    "get_started_hint": "Get started by importing from Markdown/ZIP or creating a new pool."
+    "get_started_hint": "Get started by importing from Markdown/ZIP or creating a new pool.",
+    "detail": {
+      "loading": "Loading...",
+      "questions": "questions",
+      "tags": "tags",
+      "updated": "Updated:",
+      "edit_pool": "Edit pool",
+      "export_markdown": "Export Markdown",
+      "downloading": "Downloading...",
+      "download_md_file": "Download .md file",
+      "save": "Save",
+      "private": "private",
+      "shared": "shared",
+      "edit_markdown": "Edit Markdown",
+      "import_again": "Import again",
+      "importing_markdown": "Importing...",
+      "close": "Close",
+      "edit_markdown_hint": "Edit the Markdown content below, then click \"Import again\" to update the pool.",
+      "markdown_tip": "💡 Tip: You can copy this content, edit it with an external editor, then paste it back and import.",
+      "markdown_content_placeholder": "Markdown content...",
+      "edit_question_markdown": "Edit question (Markdown)",
+      "updating": "Updating...",
+      "update": "Update",
+      "edit_question_hint": "Edit the Markdown content below, then click \"Update\" to save changes.",
+      "question_markdown_placeholder": "# QUESTION:\n...\n## TAGS: [...]\n## ANSWER:\n...",
+      "questions_section": "Questions ({count})",
+      "total_questions": "Total {count} questions",
+      "close_form": "Close form",
+      "add_question": "Add question",
+      "search_questions_placeholder": "Search questions...",
+      "all_tags": "All tags",
+      "add_new_question": "Add new question",
+      "type": "Type",
+      "tags_comma_separated": "Tags (comma-separated)",
+      "tags_placeholder": "tag1, tag2, ...",
+      "prompt": "Prompt",
+      "question_placeholder": "Question...",
+      "options": "Options",
+      "add_option": "+ Add option",
+      "option_placeholder": "Option {number}",
+      "correct": "Correct",
+      "saving": "Saving...",
+      "pool_tags": "Pool Tags (comma-separated)",
+      "pool_tags_placeholder": "basic, advanced, chapter1...",
+      "no_questions": "No questions yet.",
+      "no_matching_questions": "No questions match the filter.",
+      "tags_saved_success": "Tags saved successfully",
+      "error_saving_tags": "Error saving tags",
+      "need_at_least_2_options": "Need at least 2 options.",
+      "mcq_single_needs_1_correct": "mcq_single needs exactly 1 correct answer.",
+      "mcq_multi_needs_at_least_1_correct": "mcq_multi needs at least 1 correct answer.",
+      "question_added_success": "Question added successfully",
+      "confirm_delete_question": "Are you sure you want to delete this question?",
+      "cannot_delete_question": "Cannot delete question",
+      "question_deleted_success": "Question deleted successfully",
+      "cannot_update_question": "Cannot update question",
+      "question_updated_success": "Question updated successfully",
+      "pool_updated_success": "Pool updated successfully",
+      "share_pool_success": "Pool shared successfully",
+      "confirm_unshare": "Are you sure you want to unshare with this person?",
+      "cannot_unshare": "Cannot unshare",
+      "unshare_success": "Unshared successfully",
+      "cannot_export_markdown": "Cannot export Markdown",
+      "markdown_loaded_success": "Markdown loaded successfully",
+      "markdown_file_downloaded": "Markdown file downloaded",
+      "markdown_content_empty": "Markdown content cannot be empty",
+      "cannot_import_markdown": "Cannot import Markdown",
+      "imported_questions_success": "Successfully imported {count} questions",
+      "edit_markdown_button": "Edit Markdown",
+      "delete": "Delete",
+      "share_pool_section": "Share pool",
+      "teacher_email_placeholder": "Teacher email...",
+      "share_button": "Share",
+      "share_list": "Share list",
+      "no_name": "(no name)",
+      "unshare": "Unshare"
+    }
   },
   "Classes": {
     "meta_title": "Classes",
