--- a/bkquiz-web/src/locales/vi.json
+++ b/bkquiz-web/src/locales/vi.json
@@ -230,7 +230,83 @@
     "your_pools": "Pools của bạn",
     "pools": "pools",
     "no_pools_yet": "Chưa có question pool nào.",
-    "get_started_hint": "Bắt đầu bằng cách import từ Markdown/ZIP hoặc tạo pool mới."
+    "get_started_hint": "Bắt đầu bằng cách import từ Markdown/ZIP hoặc tạo pool mới.",
+    "detail": {
+      "loading": "Đang tải...",
+      "questions": "câu",
+      "tags": "tags",
+      "updated": "Cập nhật:",
+      "edit_pool": "Chỉnh sửa pool",
+      "export_markdown": "Export Markdown",
+      "downloading": "Đang tải...",
+      "download_md_file": "Tải file .md",
+      "save": "Lưu",
+      "private": "private",
+      "shared": "shared",
+      "edit_markdown": "Chỉnh sửa Markdown",
+      "import_again": "Import lại",
+      "importing_markdown": "Đang import...",
+      "close": "Đóng",
+      "edit_markdown_hint": "Chỉnh sửa nội dung Markdown bên dưới, sau đó bấm \"Import lại\" để cập nhật pool.",
+      "markdown_tip": "💡 Tip: Bạn có thể copy nội dung này, chỉnh sửa bằng editor bên ngoài, rồi paste lại và import.",
+      "markdown_content_placeholder": "Markdown content...",
+      "edit_question_markdown": "Chỉnh sửa câu hỏi (Markdown)",
+      "updating": "Đang cập nhật...",
+      "update": "Cập nhật",
+      "edit_question_hint": "Chỉnh sửa nội dung Markdown bên dưới, sau đó bấm \"Cập nhật\" để lưu thay đổi.",
+      "question_markdown_placeholder": "# QUESTION:\n...\n## TAGS: [...]\n## ANSWER:\n...",
+      "questions_section": "Câu hỏi ({count})",
+      "total_questions": "Tổng cộng {count} câu hỏi",
+      "close_form": "Đóng form",
+      "add_question": "Thêm câu hỏi",
+      "search_questions_placeholder": "Tìm kiếm câu hỏi...",
+      "all_tags": "Tất cả tags",
+      "add_new_question": "Thêm câu hỏi mới",
+      "type": "Type",
+      "tags_comma_separated": "Tags (comma-separated)",
+      "tags_placeholder": "tag1, tag2, ...",
+      "prompt": "Prompt",
+      "question_placeholder": "Câu hỏi...",
+      "options": "Options",
+      "add_option": "+ Thêm option",
+      "option_placeholder": "Option {number}",
+      "correct": "Đúng",
+      "saving": "Đang lưu...",
+      "pool_tags": "Pool Tags (comma-separated)",
+      "pool_tags_placeholder": "basic, advanced, chapter1...",
+      "no_questions": "Chưa có câu hỏi nào.",
+      "no_matching_questions": "Không tìm thấy câu hỏi nào phù hợp với bộ lọc.",
+      "tags_saved_success": "Đã lưu tags thành công",
+      "error_saving_tags": "Lỗi khi lưu tags",
+      "need_at_least_2_options": "Cần ít nhất 2 options.",
+      "mcq_single_needs_1_correct": "mcq_single cần chính xác 1 đáp án đúng.",
+      "mcq_multi_needs_at_least_1_correct": "mcq_multi cần ít nhất 1 đáp án đúng.",
+      "question_added_success": "Đã thêm câu hỏi thành công",
+      "confirm_delete_question": "Bạn có chắc muốn xóa câu hỏi này?",
+      "cannot_delete_question": "Không thể xóa câu hỏi",
+      "question_deleted_success": "Đã xóa câu hỏi thành công",
+      "cannot_update_question": "Không thể cập nhật câu hỏi",
+      "question_updated_success": "Đã cập nhật câu hỏi thành công",
+      "pool_updated_success": "Đã cập nhật pool thành công",
+      "share_pool_success": "Đã share pool thành công",
+      "confirm_unshare": "Bạn có chắc muốn gỡ share cho người này?",
+      "cannot_unshare": "Không thể gỡ share",
+      "unshare_success": "Đã gỡ share thành công",
+      "cannot_export_markdown": "Không thể export Markdown",
+      "markdown_loaded_success": "Đã tải Markdown thành công",
+      "markdown_file_downloaded": "Đã tải file Markdown",
+      "markdown_content_empty": "Nội dung Markdown không được để trống",
+      "cannot_import_markdown": "Không thể import Markdown",
+      "imported_questions_success": "Đã import thành công {count} câu hỏi",
+      "edit_markdown_button": "Edit Markdown",
+      "delete": "Xóa",
+      "share_pool_section": "Chia sẻ pool",
+      "teacher_email_placeholder": "Email giảng viên...",
+      "share_button": "Share",
+      "share_list": "Danh sách share",
+      "no_name": "(no name)",
+      "unshare": "Gỡ share"
+    }
   },
   "Classes": {
     "meta_title": "Lớp học",
