feat: add comprehensive i18n support for TeacherClassDetail
- Add extensive translation keys for Classes.detail namespace
- Replace all hardcoded text with i18n translations
- Support language switching for:
  - Class management and settings
  - Session creation modal
  - Quiz selection and filtering
  - Session configuration (duration, buffer, review settings)
  - Tag management
- All class detail operations now support language switching

--- a/bkquiz-web/src/locales/en.json
+++ b/bkquiz-web/src/locales/en.json
@@ -327,7 +327,63 @@
     "loading_class_info": "Loading class information...",
     "please_enter_class_name": "Please enter class name",
     "class_created_success": "Class created successfully",
-    "class_joined_success": "Class joined successfully"
+    "class_joined_success": "Class joined successfully",
+    "detail": {
+      "loading": "Loading...",
+      "teacher": "Teacher",
+      "members": "Members",
+      "sessions": "Sessions",
+      "settings": "Settings",
+      "class_code_label": "Class Code",
+      "copy": "Copy",
+      "share_class_code_hint": "Share this class code for students to join the class.",
+      "tags": "Tags",
+      "tags_placeholder": "2025, IT, HCM...",
+      "tags_hint": "Add tags to categorize and search classes more easily",
+      "danger_zone": "Danger Zone",
+      "danger_zone_hint": "Dangerous operations will be added later (archive, delete).",
+      "create_session": "Create Session",
+      "no_quizzes_yet": "No quizzes yet.",
+      "create_new_quiz": "Create new quiz",
+      "search_quiz_placeholder": "Search quiz...",
+      "filter": "Filter:",
+      "clear": "Clear",
+      "no_tags": "No tags",
+      "rules": "rules",
+      "minutes": "minutes",
+      "no_rules_warning": "⚠️ No rules",
+      "session_name": "Session name",
+      "session_name_placeholder": "Enter session name...",
+      "session_name_hint": "Default is quiz name. You can change the name for this session.",
+      "scheduled_start_time": "Start time (optional)",
+      "default_plus_5": "⏰ Default (+5 minutes)",
+      "plus_15_minutes": "+15 minutes",
+      "plus_30_minutes": "+30 minutes",
+      "remove": "✕ Remove",
+      "scheduled_start_time_hint": "Default is current time + 5 minutes (rounded). Leave empty if you want to start immediately when creating the session.",
+      "duration_minutes": "Duration (minutes)",
+      "quiz_duration": "Quiz: {duration}",
+      "unlimited": "Unlimited",
+      "using_default_from_quiz": "Using default from quiz: {duration}",
+      "duration_hint_with_default": "Default value from quiz configuration. You can change it for this session if needed.",
+      "duration_hint_no_default": "This quiz has no time limit. You can set a duration for this session.",
+      "buffer_minutes": "Buffer time before auto-close (minutes)",
+      "buffer_hint": "After the quiz time ends, the session will automatically close after {minutes} more minutes",
+      "buffer_default_hint": "Default 5 minutes. Session will automatically close after quiz time ends + buffer time.",
+      "allow_review": "Allow answer review",
+      "no_review": "Do not allow answer review",
+      "allow_review_10": "Allow review for 10 minutes",
+      "allow_review_20": "Allow review for 20 minutes",
+      "allow_review_30": "Allow review for 30 minutes",
+      "allow_review_60": "Allow review for 60 minutes",
+      "no_review_hint": "Students will not be able to review answers after the session ends.",
+      "review_hint": "Students will be able to see correct/incorrect answers within {minutes} minutes from when the session ends.",
+      "cancel": "Cancel",
+      "creating": "Creating...",
+      "create_session_button": "Create Session",
+      "session_created_success": "Session created successfully",
+      "cannot_create_session": "Cannot create session. Please try again."
+    }
   },
   "Sessions": {
     "meta_title": "My Sessions",
