--- a/bkquiz-web/src/locales/vi.json
+++ b/bkquiz-web/src/locales/vi.json
@@ -327,7 +327,63 @@
     "loading_class_info": "Đang tải thông tin lớp...",
     "please_enter_class_name": "Vui lòng nhập tên lớp",
     "class_created_success": "Đã tạo lớp thành công",
-    "class_joined_success": "Đã join lớp thành công"
+    "class_joined_success": "Đã join lớp thành công",
+    "detail": {
+      "loading": "Đang tải...",
+      "teacher": "Teacher",
+      "members": "Members",
+      "sessions": "Sessions",
+      "settings": "Settings",
+      "class_code_label": "Class Code",
+      "copy": "Copy",
+      "share_class_code_hint": "Share class code này để học sinh join lớp.",
+      "tags": "Tags",
+      "tags_placeholder": "2025, IT, HCM...",
+      "tags_hint": "Gắn tags để phân loại và tìm kiếm lớp học dễ dàng hơn",
+      "danger_zone": "Danger Zone",
+      "danger_zone_hint": "Các thao tác nguy hiểm sẽ được thêm sau (archive, delete).",
+      "create_session": "Tạo Session",
+      "no_quizzes_yet": "Chưa có quiz nào.",
+      "create_new_quiz": "Tạo quiz mới",
+      "search_quiz_placeholder": "Tìm kiếm quiz...",
+      "filter": "Filter:",
+      "clear": "Clear",
+      "no_tags": "Không có tags",
+      "rules": "rules",
+      "minutes": "phút",
+      "no_rules_warning": "⚠️ Chưa có rule",
+      "session_name": "Tên session",
+      "session_name_placeholder": "Nhập tên session...",
+      "session_name_hint": "Mặc định là tên quiz. Bạn có thể thay đổi tên cho session này.",
+      "scheduled_start_time": "Thời gian bắt đầu (tùy chọn)",
+      "default_plus_5": "⏰ Mặc định (+5 phút)",
+      "plus_15_minutes": "+15 phút",
+      "plus_30_minutes": "+30 phút",
+      "remove": "✕ Xóa",
+      "scheduled_start_time_hint": "Mặc định là hiện tại + 5 phút (làm tròn chẵn). Để trống nếu muốn bắt đầu ngay khi tạo session.",
+      "duration_minutes": "Thời gian làm bài (phút)",
+      "quiz_duration": "Quiz: {duration}",
+      "unlimited": "Không giới hạn",
+      "using_default_from_quiz": "Đang dùng mặc định từ quiz: {duration}",
+      "duration_hint_with_default": "Giá trị mặc định từ cấu hình quiz. Bạn có thể thay đổi cho session này nếu cần.",
+      "duration_hint_no_default": "Quiz này không có giới hạn thời gian. Bạn có thể đặt thời gian cho session này.",
+      "buffer_minutes": "Thời gian buffer trước khi tự động đóng (phút)",
+      "buffer_hint": "Sau khi hết thời gian làm bài, session sẽ tự động đóng sau {minutes} phút nữa",
+      "buffer_default_hint": "Mặc định 5 phút. Session sẽ tự động đóng sau khi hết thời gian làm bài + buffer time.",
+      "allow_review": "Cho phép xem lại đáp án",
+      "no_review": "Không cho xem lại đáp án",
+      "allow_review_10": "Cho xem lại trong 10 phút",
+      "allow_review_20": "Cho xem lại trong 20 phút",
+      "allow_review_30": "Cho xem lại trong 30 phút",
+      "allow_review_60": "Cho xem lại trong 60 phút",
+      "no_review_hint": "Student sẽ không thể xem lại đáp án sau khi session kết thúc.",
+      "review_hint": "Student sẽ có thể xem đáp án đúng/sai trong vòng {minutes} phút từ khi session kết thúc.",
+      "cancel": "Hủy",
+      "creating": "Đang tạo...",
+      "create_session_button": "Tạo Session",
+      "session_created_success": "Đã tạo session thành công",
+      "cannot_create_session": "Không tạo được session. Vui lòng thử lại."
+    }
   },
   "Sessions": {
     "meta_title": "Phiên của tôi",
