feat: add i18n support for SessionsPanel
- Add translation keys for Sessions namespace
- Replace all hardcoded text with i18n translations
- Support language switching for session status, times, and actions
- All session panel text now supports language switching

--- a/bkquiz-web/src/locales/en.json
+++ b/bkquiz-web/src/locales/en.json
@@ -388,7 +388,30 @@
   "Sessions": {
     "meta_title": "My Sessions",
     "title": "My Sessions",
-    "breadcrumb_dashboard": "Dashboard"
+    "breadcrumb_dashboard": "Dashboard",
+    "error": "Error",
+    "bkquiz_sessions": "BKquiz Sessions",
+    "view_and_manage_description": "View and manage sessions you are participating in or have participated in.",
+    "ongoing": "Ongoing ({count})",
+    "status_active": "🟢 Ongoing",
+    "status_lobby": "🟡 Waiting to start",
+    "start_time": "📅 Start time:",
+    "started": "▶️ Started:",
+    "end_time": "🏁 End:",
+    "waiting_to_start": "Waiting to start ({count})",
+    "past_sessions": "Past Sessions",
+    "ended": "Ended ({count})",
+    "status_ended": "⚫ Ended",
+    "score": "Score:",
+    "no_sessions": "No sessions yet.",
+    "join_class_hint": "Join a class to be invited to sessions.",
+    "join_class": "Join class",
+    "other": "Other",
+    "session": "session",
+    "sessions": "sessions",
+    "minutes": "minutes",
+    "view_details": "View details →",
+    "join_session": "Join session →"
   },
   "Attempt": {
     "submit_success": "Submitted. Score: {score} (correct {correctCount}/{totalQuestions})",
