--- a/bkquiz-web/src/locales/vi.json
+++ b/bkquiz-web/src/locales/vi.json
@@ -388,7 +388,30 @@
   "Sessions": {
     "meta_title": "Phiên của tôi",
     "title": "Phiên của tôi",
-    "breadcrumb_dashboard": "Bảng điều khiển"
+    "breadcrumb_dashboard": "Bảng điều khiển",
+    "error": "Lỗi",
+    "bkquiz_sessions": "BKquiz Sessions",
+    "view_and_manage_description": "Xem và quản lý các session bạn đang tham gia hoặc đã tham gia.",
+    "ongoing": "Đang diễn ra ({count})",
+    "status_active": "🟢 Đang diễn ra",
+    "status_lobby": "🟡 Chờ bắt đầu",
+    "start_time": "📅 Bắt đầu:",
+    "started": "▶️ Đã bắt đầu:",
+    "end_time": "🏁 Kết thúc:",
+    "waiting_to_start": "Chờ bắt đầu ({count})",
+    "past_sessions": "Past Sessions",
+    "ended": "Đã kết thúc ({count})",
+    "status_ended": "⚫ Đã kết thúc",
+    "score": "Điểm:",
+    "no_sessions": "Chưa có session nào.",
+    "join_class_hint": "Tham gia lớp học để được mời vào các session.",
+    "join_class": "Tham gia lớp học",
+    "other": "Khác",
+    "session": "session",
+    "sessions": "sessions",
+    "minutes": "phút",
+    "view_details": "Xem chi tiết →",
+    "join_session": "Join session →"
   },
   "Attempt": {
     "submit_success": "Đã submit. Score: {score} (đúng {correctCount}/{totalQuestions})",
