feat: add i18n support for Performance and SessionLobby pages
- Add translation keys for Performance namespace (en/vi)
- Add translation keys for SessionLobby namespace (en/vi)
- Replace all hardcoded text in PerformancePanel with i18n
- Replace all hardcoded text in studentLobby with i18n
- Update formatDuration to support locale-based formatting
- All performance and session lobby text now supports language switching

--- a/bkquiz-web/src/locales/en.json
+++ b/bkquiz-web/src/locales/en.json
@@ -413,6 +413,53 @@
     "view_details": "View details →",
     "join_session": "Join session →"
   },
+  "Performance": {
+    "meta_title": "My Performance",
+    "title": "My Performance",
+    "subtitle": "My Statistics",
+    "description": "View scores and statistics of quizzes you have taken.",
+    "breadcrumb_dashboard": "Dashboard",
+    "error": "Error",
+    "total_attempts": "Total attempts",
+    "attempts": "attempts",
+    "total_attempts_description": "Number of quizzes you have submitted.",
+    "average_score": "Average score",
+    "average_score_description": "Average score of all attempts.",
+    "highest_score": "Highest score",
+    "highest_score_description": "Highest score you achieved.",
+    "recent_attempts": "Recent attempts ({count})",
+    "submitted_at": "Submitted at:",
+    "no_score": "No score",
+    "no_attempts": "No attempts yet.",
+    "join_sessions_hint": "Join sessions to start taking quizzes.",
+    "view_sessions": "View Sessions"
+  },
+  "SessionLobby": {
+    "breadcrumb_dashboard": "Dashboard",
+    "breadcrumb_session": "Session",
+    "cannot_access_session": "Cannot access session",
+    "class": "Class:",
+    "class_code": "Class code:",
+    "teacher": "Teacher:",
+    "joined_waiting": "Joined, waiting for teacher to start",
+    "auto_redirect_hint": "Screen will automatically redirect when session starts",
+    "waited": "Waited:",
+    "join_session": "Join session",
+    "join_session_hint": "Click the button below to join. Then you will wait for the teacher to start.",
+    "joining": "Joining...",
+    "join": "Join",
+    "session_started": "Session has started",
+    "click_to_start_quiz": "Click the button below to start the quiz",
+    "started_at": "Started at:",
+    "entering": "Entering...",
+    "start_quiz": "Start quiz",
+    "session_ended": "Session ended",
+    "ask_teacher_for_results": "Ask the teacher if you need to review results",
+    "ended_at": "Ended at:",
+    "back_to_class": "Back to class",
+    "minutes": "minutes",
+    "hours": "hours"
+  },
   "Attempt": {
     "submit_success": "Submitted. Score: {score} (correct {correctCount}/{totalQuestions})",
     "submit_failed": "Submit failed",
