--- a/bkquiz-web/src/locales/vi.json
+++ b/bkquiz-web/src/locales/vi.json
@@ -413,6 +413,53 @@
     "view_details": "Xem chi tiết →",
     "join_session": "Join session →"
   },
+  "Performance": {
+    "meta_title": "Thống kê của tôi",
+    "title": "Thống kê của tôi",
+    "subtitle": "Thống kê của tôi",
+    "description": "Xem điểm số và thống kê các bài quiz bạn đã làm.",
+    "breadcrumb_dashboard": "Bảng điều khiển",
+    "error": "Lỗi",
+    "total_attempts": "Tổng số bài đã làm",
+    "attempts": "attempts",
+    "total_attempts_description": "Số bài quiz bạn đã nộp.",
+    "average_score": "Điểm trung bình",
+    "average_score_description": "Điểm trung bình tất cả các bài.",
+    "highest_score": "Điểm cao nhất",
+    "highest_score_description": "Điểm cao nhất bạn đạt được.",
+    "recent_attempts": "Bài làm gần đây ({count})",
+    "submitted_at": "Nộp lúc:",
+    "no_score": "Chưa có điểm",
+    "no_attempts": "Chưa có bài làm nào.",
+    "join_sessions_hint": "Tham gia các session để bắt đầu làm bài quiz.",
+    "view_sessions": "Xem Sessions"
+  },
+  "SessionLobby": {
+    "breadcrumb_dashboard": "Bảng điều khiển",
+    "breadcrumb_session": "Session",
+    "cannot_access_session": "Không vào được session",
+    "class": "Lớp:",
+    "class_code": "Mã lớp:",
+    "teacher": "Giảng viên:",
+    "joined_waiting": "Đã tham gia, đang chờ giảng viên bắt đầu",
+    "auto_redirect_hint": "Màn hình sẽ tự động chuyển khi session bắt đầu",
+    "waited": "Đã chờ:",
+    "join_session": "Tham gia session",
+    "join_session_hint": "Bấm nút bên dưới để tham gia. Sau đó bạn sẽ chờ giảng viên bắt đầu.",
+    "joining": "Đang tham gia...",
+    "join": "Tham gia",
+    "session_started": "Session đã bắt đầu",
+    "click_to_start_quiz": "Bấm nút bên dưới để vào làm bài",
+    "started_at": "Bắt đầu lúc:",
+    "entering": "Đang vào...",
+    "start_quiz": "Vào làm bài",
+    "session_ended": "Session đã kết thúc",
+    "ask_teacher_for_results": "Hỏi giảng viên nếu cần xem lại kết quả",
+    "ended_at": "Kết thúc lúc:",
+    "back_to_class": "Quay lại lớp học",
+    "minutes": "phút",
+    "hours": "giờ"
+  },
   "Attempt": {
     "submit_success": "Đã submit. Score: {score} (đúng {correctCount}/{totalQuestions})",
     "submit_failed": "Submit thất bại",
